objects/ApprovalRecordType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>For Approval Record Type Selection Page</description>
    <fields>
        <fullName>ApprovalRequestType__c</fullName>
        <label>ApprovalRequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Type__c</fullName>
        <label>ApprovalRequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Page_Name__c</fullName>
        <label>Edit Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Page_Name__c</fullName>
        <label>View Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page_Name__c</fullName>
        <label>Visualforce Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isVisualforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVisualforce</label>
        <type>Checkbox</type>
    </fields>
    <label>ApprovalRecordType</label>
</CustomObject>